After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663956 - Impossible to add Desktop folder to bookmarks in Nautilus
Impossible to add Desktop folder to bookmarks in Nautilus
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Sidebar
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-13 12:51 UTC by freggy1
Modified: 2011-12-19 09:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
places-sidebar: make desktop dir bookmarkable if not show by default (1.71 KB, patch)
2011-12-04 13:28 UTC, Stefano Teso
committed Details | Review

Description freggy1 2011-11-13 12:51:54 UTC
After having migrated from GNOME 2, I still have some files available ~/Desktop so I would like the Desktop folder to be easily available from Nautilus' sidebar. I noticed that the Desktop is not shown anymore in the sidebar by default, so I wanted to add it as a bookmark myself. However, that seems to be impossible: while I can drag any folder to the Bookmarks list in the sidebar, this is not possible for the Desktop folder: the cursor does not change when hovering over the Bookmarks list, and nothing happens when I drop it. If Desktop is not shown by default in Nautilus' side bar, then at least it should be possible for the user to bookmark it, like any other folder.
Comment 1 Kamil Páral 2011-11-16 10:42:59 UTC
Confirmed in Fedora 16, nautilus-3.2.1-2.fc16.x86_64. Desktop folder can be bookmarked using 'Add bookmark' option, but it doesn't show up in the side pane.
Comment 2 Stefano Teso 2011-12-04 13:28:16 UTC
Created attachment 202752 [details] [review]
places-sidebar: make desktop dir bookmarkable if not show by default

The attached patch makes the desktop directory bookmarkable (i.e., it can be dragged to the bookmarks section and it is actually shown in the bookmarks) whenever it is not displayed as a built-in.

This bug also implies that the CTRL+D handler is not in-sync with the places sidebar rules for accepting bookmarks. I'll take a look at it and file a bug if needed.
Comment 3 Cosimo Cecchi 2011-12-05 14:07:51 UTC
Review of attachment 202752 [details] [review]:

Sounds useful, thanks.
What happens if I add a bookmark to ~/Desktop and then later enable the show-desktop-icons setting? Does the bookmark automatically turn into a built-in one as expected (and viceversa)?
Comment 4 Stefano Teso 2011-12-08 13:15:48 UTC
(In reply to comment #3)
> Review of attachment 202752 [details] [review]:
> 
> Sounds useful, thanks.
> What happens if I add a bookmark to ~/Desktop and then later enable the
> show-desktop-icons setting? Does the bookmark automatically turn into a
> built-in one as expected (and viceversa)?

Upon the first call to update_places (). I guess the sidebar should subscribe to whatever signal changing the option implies. Will respin.
Comment 5 Stefano Teso 2011-12-08 13:50:55 UTC
> > What happens if I add a bookmark to ~/Desktop and then later enable the
> > show-desktop-icons setting? Does the bookmark automatically turn into a
> > built-in one as expected (and viceversa)?
> 
> Upon the first call to update_places (). I guess the sidebar should subscribe
> to whatever signal changing the option implies. Will respin.

The code already takes care of that. Tested, it works okay.

(Note that toggling show-desktop-icons a few times segfaults nautilus. Will open a new bug.)

Should I commit the patch?
Comment 6 Cosimo Cecchi 2011-12-08 15:55:09 UTC
(In reply to comment #5)

> The code already takes care of that. Tested, it works okay.

Okay, thanks for testing.

> (Note that toggling show-desktop-icons a few times segfaults nautilus. Will
> open a new bug.)
> 
> Should I commit the patch?

Yes please.
Comment 7 Cosimo Cecchi 2011-12-19 09:23:00 UTC
Pushed to master.