places-sidebar: make Desktop dir bookmarkable if not shown by default

See: https://bugzilla.gnome.org/show_bug.cgi?id=663956